on mobile devices, fix for incorrect display of the chat page

--- a/src/components/Dialogs/Dialogs.module.scss
+++ b/src/components/Dialogs/Dialogs.module.scss
@@ -121,12 +121,12 @@
     @media (max-width: 992px){
         padding-right: 15px;
         min-height: 250px;
-        max-height: 340px;///////////////
+        max-height: 320px;///////////////
     }
     @media (max-width: 391px){
         padding-right: 15px;
         min-height: 200px;
-        max-height: 300px;/////////////////
+        max-height: 280px;/////////////////
     }
 
     @media (max-width: 376px){
